--- a/static/css/loginform.css
+++ b/static/css/loginform.css
@@ -465,3 +465,27 @@ iframe {
   /* background: linear-gradient(to right bottom, rgba(206, 206, 206, 0.713), rgba(51, 52, 53, 0.713)) */
 }
 
+
+.gradient-custom3 {
+  /* fallback for old browsers */
+  background: #b6af98;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right bottom, rgba(13, 14, 14, 0.713), rgba(222, 225, 228, 0.713));
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right bottom, rgba(13, 14, 14, 0.713), rgba(222, 225, 228, 0.713))
+  /* background: linear-gradient(to right bottom, rgba(206, 206, 206, 0.713), rgba(51, 52, 53, 0.713)) */
+}
+
+.gradient-custom4 {
+  /* fallback for old browsers */
+  background: #b6af98;
+
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right bottom, rgba(222, 225, 228, 0.713), rgba(13, 14, 14, 0.713));
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right bottom, rgba(222, 225, 228, 0.713), rgba(13, 14, 14, 0.713))
+  /* background: linear-gradient(to right bottom, rgba(206, 206, 206, 0.713), rgba(51, 52, 53, 0.713)) */
+}
