--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
   <link rel="stylesheet" href="/static/css/jquery.fancybox.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" />
   <link rel="stylesheet" href="/static/css/bootstrap-datepicker.css">
-
+  <link href="https://fonts.googleapis.com/css?family=Kaushan+Script|Source+Sans+Pro" rel="stylesheet">
   <link rel="stylesheet" href="/static/fonts/flaticon/font/flaticon.css">
 
   <link rel="stylesheet" href="/static/css/aos.css">
@@ -41,6 +41,8 @@
   <link rel="stylesheet" href="/static/css/hamburgers.min.css">
   <link rel="stylesheet" href="/static/css/select2.min.css">
   <link rel="stylesheet" href="/static/css/util.css">
+  <link rel="stylesheet" href="/static/css/themify-icons.css">
+  <link rel="stylesheet" href="/static/css/date-picker/css/datepicker.min.css">
   <link rel="stylesheet" href="/static/css/loginform.css">
   <link rel="stylesheet" href="/static/css/form.css">
   <link rel="stylesheet" href="/static/css/help.css">
@@ -49,6 +51,7 @@
   <link rel="stylesheet" href="/static/css/ionicons.min.css">
   <link rel="stylesheet" href="/static/css/flaticon.css">
   <link rel="stylesheet" href="/static/css/fess.css">
+  <link rel="stylesheet" href="/static/css/blog.css">
 
   {% endblock %}
 
@@ -92,6 +95,8 @@
     <script src="/static/js/jquery-ui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.3/TweenMax.min.js"></script>
     <script src="/static/js/owl.carousel.min.js"></script>
+    <script src="/static/css/date-picker/js/datepicker.js"></script>
+    <script src="/static/css/date-picker/js/datepicker.en.js"></script>
     <script src="/static/js/jquery.countdown.min.js"></script>
     <script src="/static/js/bootstrap-datepicker.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
