--- a/templates/records.html
+++ b/templates/records.html
@@ -24,9 +24,9 @@
     <a href="#bs" class="smoothscroll arrow-down"><span class="icon-arrow_downward"></span></a>
 </div>
 
-<div class="container-fluid" style="background-color: azure;">
+<div class="container-fluid" style="background-color: rgb(245, 255, 255);">
 
-  <div class="container " style="height:70vh;">
+  <div class="container " style="height:90vh;">
     <div class="records "  style="padding-top:10%;">
       {% if records %}
   
