--- a/templates/success.html
+++ b/templates/success.html
@@ -1,5 +1,101 @@
 {% extends 'base.html' %}
 {% block content %}
+
+<style>
+  *{
+  box-sizing:border-box;
+ /* outline:1px solid ;*/
+}
+body{
+background: #ffffff;
+background: linear-gradient(to bottom, #ffffff 0%,#e1e8ed 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e1e8ed',GradientType=0 );
+    height: 100%;
+        margin: 0;
+        background-repeat: no-repeat;
+        background-attachment: fixed;
+  
+}
+
+.wrapper-1{
+  width:100%;
+  height:100vh;
+  display: flex;
+flex-direction: column;
+}
+.wrapper-2{
+  padding :30px;
+  text-align:center;
+}
+.drew{
+    font-family: 'Kaushan Script', cursive;
+  font-size:4em;
+  letter-spacing:3px;
+  color:#75c071 ;
+  margin:0;
+  margin-bottom:20px;
+}
+.wrapper-2 p{
+  margin:0;
+  font-size:1.3em;
+  color:#aaa;
+  font-family: 'Source Sans Pro', sans-serif;
+  letter-spacing:1px;
+}
+.go-home{
+  color:#fff;
+  background:#75c071;
+  border:none;
+  padding:10px 50px;
+  margin:30px 0;
+  border-radius:30px;
+  text-transform:capitalize;
+  box-shadow: 0 10px 16px 1px rgba(174, 199, 251, 1);
+}
+.footer-like{
+  margin-top: auto; 
+  background:#D7E6FE;
+  padding:6px;
+  text-align:center;
+}
+.footer-like p{
+  margin:0;
+  padding:4px;
+  color:#75c071;
+  font-family: 'Source Sans Pro', sans-serif;
+  letter-spacing:1px;
+}
+.footer-like p a{
+  text-decoration:none;
+  color:#75c071;
+  font-weight:600;
+}
+
+@media (min-width:360px){
+  h1{
+    font-size:4.5em;
+  }
+  .go-home{
+    margin-bottom:20px;
+  }
+}
+
+@media (min-width:600px){
+  .content{
+  max-width:1000px;
+  margin:0 auto;
+}
+  .wrapper-1{
+  height: initial;
+  max-width:620px;
+  margin:0 auto;
+  margin-top:50px;
+  box-shadow: 4px 8px 40px 8px rgba(88, 255, 171, 0.2);
+}
+  
+}
+</style>
+
 <div class="overlay" style="box-shadow:inset 0 0 0 2000px rgba(23, 34, 23, 0.863);background-image: url(/static/images/hero_1.jpg);color: white;" data-aos="fade" id="home-section">
 
 
@@ -17,7 +113,7 @@
     <a href="#heading" class="smoothscroll arrow-down"><span class="icon-arrow_downward"></span></a>
   </div>  
 
-
+<!-- 
 <div class="container" style="margin-top: 50px;margin-bottom: 40px;">
     <div class="row">
         <div class="col-md-6">
@@ -27,6 +123,25 @@
             </p>
         </div>
     </div>
+</div> -->
+
+<div class=content>
+  <div class="wrapper-1">
+    <div class="wrapper-2">
+      <h1 class="drew">Pending Approval !</h1>
+      <p>Upon payment completion you'll receive an email notification affirming approval  </p>
+      <p></p>
+      <button class="go-home">
+      <a class="text-light" href="/">Go Home</a>
+      </button>
+    </div>
+    <div class="footer-like bg-light">
+      <p>Notification push not received?
+       <a href=/delivery/payment/>Click here to try again</a>
+      </p>
+    </div>
 </div>
+</div>
+
 
 {% endblock %}
