--- a/templates/payment.html
+++ b/templates/payment.html
@@ -146,22 +146,22 @@
                                 <div class="col-md-5">
 
                                     <input style="border-radius: 0;display: none;" name='fname' class="form-control" type="text"
-                                        id="example-email-input" value="{{request_transport.user.first_name}}" readonly>
+                                        id="example-email-input" value="{{request_transport.user.first_name}}" >
                                 </div><br>
                                 <div class="col-md-5">
                                     {%if request_goods.transport_goods.count > 0 %}
                                     {%if request_transport.transport_type == 'Pick-Up' %}
                                     <input style="border-radius: 0;display: none;" name='amount' class="form-control" type="text"
                                         required id="example-total-input"
-                                        value={{request_transport.price|add:request_goods.total_cost}} readonly>
+                                        value={{request_transport.price|add:request_goods.total_cost}} >
                                     {%else%}
 
                                     <input style="border-radius: 0;display: none;" name='amount' class="form-control" type="text"
-                                        required id="example-total-input" value={{request_transport.price}} readonly>
+                                        required id="example-total-input" value={{request_transport.price}} >
                                     {%endif%}
                                     {%else%}
                                     <input style="border-radius: 0;display: none;" name='amount' class="form-control" type="text"
-                                        required id="example-total-input" value={{request_goods.total_cost}} readonly>
+                                        required id="example-total-input" value={{request_goods.total_cost}} >
 
                                     {%endif%}
                                 </div><br>
